2010-07-21  Brian Gough  <bjg@gnu.org>

	* beta.c (gsl_ran_beta_pdf): avoid overflow for x==0 || x==1 and
	a>1,b>1

2010-03-01  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (testPDF): extend the test run if a sample fails on the
	first pass.

2010-02-24  Brian Gough  <bjg@network-theory.co.uk>

	* fdist.c (gsl_ran_fdist_pdf): compute log of pdf to avoid
	overflow/underflow.

2009-07-10  Brian Gough  <bjg@network-theory.co.uk>

	* exponential.c (gsl_ran_exponential): use log(1-u) to include 0
	in the range of possible outputs

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* discrete.c (gsl_ran_discrete_free): handle NULL argument in free

2009-05-16  Brian Gough  <bjg@network-theory.co.uk>

	* discrete.c (push_stack): replace abort() with an error return
	value
	(pop_stack): replace abort() with GSL_ERROR
	(gsl_ran_discrete_preproc): use g->A as a temporary array to store
	the results of the test E[k]<mean to avoid discrepancies due to
	excess precision

2008-11-30  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_gamma_vlarge): added test for a >= UINT_MAX.

	* gamma.c (gsl_ran_gamma_knuth): handle the case a >= UINT_MAX.

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2008-02-09  Brian Gough  <bjg@network-theory.co.uk>

	* gausszig.c (gsl_ran_gaussian_ziggurat): handle different
	generator ranges explicitly

2007-09-20  Brian Gough  <bjg@network-theory.co.uk>

	* multinomial.c (gsl_ran_multinomial_lnpdf):  Handle case where
	n[k]==0 and p[k]==0 

2007-08-20  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (integrate): perform the integration of the pdf with the
	gsl_integration functions for accuracy (needed for dirichlet
	distribution)

	* dirichlet.c (ran_dirichlet_small): handle underflow for small
	alpha[] values

2007-02-20  Brian Gough  <bjg@network-theory.co.uk>

	* gamma.c (gsl_ran_gamma): avoid an unnecessary function call to